# rhei

./: .coveragerc  .flake8  .gitignore  Dockerfile  Pipfile  README.md  README.rst  docker-compose.yml  mypy.ini  setup.cfg  setup.py
.circleci/: config.yml
docker/: Dockerfile
docker/debug/: setup.sh
docker/motd/: motd
rhei/: __init__.py  stopwatch.py  timer.py
rhei/tests/: test_timer.py
tests/: conftest.py  test_stopwatch.py  test_timer.py
