# Type of python distribution
[bdist_wheel]
universal=0

[metadata]
name = rhei
author = Damien Krystkiewicz
author_email = damian.krystkiewicz@gmail.com
summary = Package that implements simple stopwatch class.
license = Apache 2.0
description-file = README.rst
home-page = https://github.com/dkrystki/rhei
python_requires = >= 3.6
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
[options]
packages = find:

[entry_points]
console_scripts =
    automabot = rhei.__main__:main
